--- a/todo.html
+++ b/todo.html
@@ -40,8 +40,8 @@
 				<input type="radio" name="cat" value="Homework" title="lime">Homework
 				<input type="radio" name="cat" value="Family" title="red">Family
 			</div>
-			<input type="text" id="newCat" value="Catagory"></input>
-			<input type="color" id="newColor"></input>
+			New Catagory: <input type="text" id="newCat" value=""></input>
+			<input type="color" id="newColor" color="yellow"></input>
 			</br><button value="Add New Catagory" onclick="newCat()">Add New Catagory</button>
 			</br><button onclick="addToTable()">Submit</button>
 		</div>
