--- a/todo.html
+++ b/todo.html
@@ -32,7 +32,7 @@
 		<div id="newItem">
 			<h2>New Item</h2>
 			Discription: <input type="text" id="newDisc" value=""></input>
-			</br>Set a Deadline: <input type="datetime-local" id="newTime"></input>
+			 Set a Deadline: <input type="datetime-local" id="newTime"></input>
 			</br>
 			<div id="catagories">
 				Select a Catagory: <input type="radio" name="cat" value="Chores" title="fuchsia">Chores
@@ -40,10 +40,10 @@
 				<input type="radio" name="cat" value="Homework" title="lime">Homework
 				<input type="radio" name="cat" value="Family" title="red">Family
 			</div>
-			New Catagory: <input type="text" id="newCat" value=""></input>
-			<input type="color" id="newColor" color="yellow"></input>
-			</br><button value="Add New Catagory" onclick="newCat()">Add New Catagory</button>
-			</br><button onclick="addToTable()">Submit</button>
+			<input type="color" id="newColor" value="New Color" color="red"></input>
+			<input type="text" id="newCat" value="Catagory"></input>
+			<button value="Add New Catagory" onclick="newCat()">Add New Catagory</button>
+			</br></br><button onclick="addToTable()">Submit</button>
 		</div>
 	</div>
 
