--- a/todo.html
+++ b/todo.html
@@ -40,7 +40,7 @@
 				<input type="radio" name="cat" value="Homework" title="lime">Homework
 				<input type="radio" name="cat" value="Family" title="red">Family
 			</div>
-			<input type="color" id="newColor" value="New Color" color="red"></input>
+			<input type="color" id="newColor" value="red" color="red"></input>
 			<input type="text" id="newCat" value="Catagory"></input>
 			<button value="Add New Catagory" onclick="newCat()">Add New Catagory</button>
 			</br></br><button onclick="addToTable()">Submit</button>
