--- a/pic.html
+++ b/pic.html
@@ -13,31 +13,31 @@
 		<a class="prev" onclick="nextSlide(-1)">&#10094;</a>
 		<a class="next" onclick="nextSlide(1)">&#10095;</a>
 		<a class="play" onclick="playShow()">&#x25b7;</a>
-		<div class="boxContent fade">
+		<div class="boxContent">
 			<img src="p1.jpg" id="theImage">
 		</div>
 		<table id="gallery" align="center" style="clear:both">
 		<tr>
-			<td><img src="p1.jpg" onclick="CurrentSlide(1)"></img></td>
-			<td><img src="p2.jpg" onclick="CurrentSlide(2)"></img></td>
-			<td><img src="p3.jpg" onclick="CurrentSlide(3)"></img></td>
-			<td><img src="p4.jpg" onclick="CurrentSlide(4)"></img></td>
-			<td><img src="p5.jpg" onclick="CurrentSlide(5)"></img></td>
-			<td><img src="p6.jpg" onclick="CurrentSlide(6)"></img></td>
-			<td><img src="p7.jpg" onclick="CurrentSlide(7)"></img></td>
-			<td><img src="p8.jpg" onclick="CurrentSlide(8)"></img></td>
-			<td><img src="p9.jpg" onclick="CurrentSlide(9)"></img></td>
-			<td><img src="p10.jpg" onclick="CurrentSlide(10)"></img></td>
-			<td><img src="p11.jpg" onclick="CurrentSlide(11)"></img></td>
-			<td><img src="p12.jpg" onclick="CurrentSlide(12)"></img></td>
-			<td><img src="p13.jpg" onclick="CurrentSlide(13)"></img></td>
-			<td><img src="p14.jpg" onclick="CurrentSlide(14)"></img></td>
-			<td><img src="p15.jpg" onclick="CurrentSlide(15)"></img></td>
-			<td><img src="p16.jpg" onclick="CurrentSlide(16)"></img></td>
-			<td><img src="p17.jpg" onclick="CurrentSlide(17)"></img></td>
-			<td><img src="p18.jpg" onclick="CurrentSlide(18)"></img></td>
-			<td><img src="p19.jpg" onclick="CurrentSlide(19)"></img></td>
-			<td><img src="p20.jpg" onclick="CurrentSlide(20)"></img></td>
+			<td><img class="light fade" src="p1.jpg" onclick="CurrentSlide(1)"></img></td>
+			<td><img class="light fade" src="p2.jpg" onclick="CurrentSlide(2)"></img></td>
+			<td><img class="light fade" src="p3.jpg" onclick="CurrentSlide(3)"></img></td>
+			<td><img class="light fade" src="p4.jpg" onclick="CurrentSlide(4)"></img></td>
+			<td><img class="light fade" src="p5.jpg" onclick="CurrentSlide(5)"></img></td>
+			<td><img class="light fade" src="p6.jpg" onclick="CurrentSlide(6)"></img></td>
+			<td><img class="light fade" src="p7.jpg" onclick="CurrentSlide(7)"></img></td>
+			<td><img class="light fade" src="p8.jpg" onclick="CurrentSlide(8)"></img></td>
+			<td><img class="light fade" src="p9.jpg" onclick="CurrentSlide(9)"></img></td>
+			<td><img class="light fade" src="p10.jpg" onclick="CurrentSlide(10)"></img></td>
+			<td><img class="light fade" src="p11.jpg" onclick="CurrentSlide(11)"></img></td>
+			<td><img class="light fade" src="p12.jpg" onclick="CurrentSlide(12)"></img></td>
+			<td><img class="light fade" src="p13.jpg" onclick="CurrentSlide(13)"></img></td>
+			<td><img class="light fade" src="p14.jpg" onclick="CurrentSlide(14)"></img></td>
+			<td><img class="light fade" src="p15.jpg" onclick="CurrentSlide(15)"></img></td>
+			<td><img class="light fade" src="p16.jpg" onclick="CurrentSlide(16)"></img></td>
+			<td><img class="light fade" src="p17.jpg" onclick="CurrentSlide(17)"></img></td>
+			<td><img class="light fade" src="p18.jpg" onclick="CurrentSlide(18)"></img></td>
+			<td><img class="light fade" src="p19.jpg" onclick="CurrentSlide(19)"></img></td>
+			<td><img class="light fade" src="p20.jpg" onclick="CurrentSlide(20)"></img></td>
 		</tr>
 		</table>
 	</div>
@@ -55,28 +55,28 @@
 	<h1>Photo Gallery</h1>
 		<table id="gallery" align="center">
 		<tr>
-			<td><img src="p1.jpg" onclick="CurrentSlide(1);openBox()"></td>
-			<td><img src="p2.jpg" onclick="CurrentSlide(2);openBox()"></img></td>
-			<td><img src="p3.jpg" onclick="CurrentSlide(3);openBox()"></img></td>
-			<td><img src="p4.jpg" onclick="CurrentSlide(4);openBox()"></img></td>
-			<td><img src="p5.jpg" onclick="CurrentSlide(5);openBox()"></img></td>
-			<td><img src="p6.jpg" onclick="CurrentSlide(6);openBox()"></img></td>
-			<td><img src="p7.jpg" onclick="CurrentSlide(7);openBox()"></img></td>
-			<td><img src="p8.jpg" onclick="CurrentSlide(8);openBox()"></img></td>
-			<td><img src="p9.jpg" onclick="CurrentSlide(9);openBox()"></img></td>
-			<td><img src="p10.jpg" onclick="CurrentSlide(10);openBox()"></img></td>
+			<td><img class="fade" src="p1.jpg" onclick="CurrentSlide(1);openBox()"></td>
+			<td><img class="fade" src="p2.jpg" onclick="CurrentSlide(2);openBox()"></img></td>
+			<td><img class="fade" src="p3.jpg" onclick="CurrentSlide(3);openBox()"></img></td>
+			<td><img class="fade" src="p4.jpg" onclick="CurrentSlide(4);openBox()"></img></td>
+			<td><img class="fade" src="p5.jpg" onclick="CurrentSlide(5);openBox()"></img></td>
+			<td><img class="fade" src="p6.jpg" onclick="CurrentSlide(6);openBox()"></img></td>
+			<td><img class="fade" src="p7.jpg" onclick="CurrentSlide(7);openBox()"></img></td>
+			<td><img class="fade" src="p8.jpg" onclick="CurrentSlide(8);openBox()"></img></td>
+			<td><img class="fade" src="p9.jpg" onclick="CurrentSlide(9);openBox()"></img></td>
+			<td><img class="fade" src="p10.jpg" onclick="CurrentSlide(10);openBox()"></img></td>
 		</tr>
 		<tr>
-			<td><img src="p11.jpg" onclick="CurrentSlide(11);openBox()"></img></td>
-			<td><img src="p12.jpg" onclick="CurrentSlide(12);openBox()"></img></td>
-			<td><img src="p13.jpg" onclick="CurrentSlide(13);openBox()"></img></td>
-			<td><img src="p14.jpg" onclick="CurrentSlide(14);openBox()"></img></td>
-			<td><img src="p15.jpg" onclick="CurrentSlide(15);openBox()"></img></td>
-			<td><img src="p16.jpg" onclick="CurrentSlide(16);openBox()"></img></td>
-			<td><img src="p17.jpg" onclick="CurrentSlide(17);openBox()"></img></td>
-			<td><img src="p18.jpg" onclick="CurrentSlide(18);openBox()"></img></td>
-			<td><img src="p19.jpg" onclick="CurrentSlide(19);openBox()"></img></td>
-			<td><img src="p20.jpg" onclick="CurrentSlide(20);openBox()"></img></td>
+			<td><img class="fade" src="p11.jpg" onclick="CurrentSlide(11);openBox()"></img></td>
+			<td><img class="fade" src="p12.jpg" onclick="CurrentSlide(12);openBox()"></img></td>
+			<td><img class="fade" src="p13.jpg" onclick="CurrentSlide(13);openBox()"></img></td>
+			<td><img class="fade" src="p14.jpg" onclick="CurrentSlide(14);openBox()"></img></td>
+			<td><img class="fade" src="p15.jpg" onclick="CurrentSlide(15);openBox()"></img></td>
+			<td><img class="fade" src="p16.jpg" onclick="CurrentSlide(16);openBox()"></img></td>
+			<td><img class="fade" src="p17.jpg" onclick="CurrentSlide(17);openBox()"></img></td>
+			<td><img class="fade" src="p18.jpg" onclick="CurrentSlide(18);openBox()"></img></td>
+			<td><img class="fade" src="p19.jpg" onclick="CurrentSlide(19);openBox()"></img></td>
+			<td><img class="fade" src="p20.jpg" onclick="CurrentSlide(20);openBox()"></img></td>
 		</tr>
 		</table> 
 		<!--<img src="p1.jpg" id="image"> </img>-->
